--- a/css/style.scss
+++ b/css/style.scss
@@ -73,6 +73,7 @@ body {
 
 .item {
   &__content {
+    @include flex-box(flex-start, center, row, flex);
     width: 70%;
     height: 3rem;
     border: 1px solid black;
@@ -98,13 +99,13 @@ body {
   margin: 1rem;
   cursor: pointer;
   border: 1px solid $white;
-  transition: border ease 200ms;
+  transition: color ease 200ms;
 
   i {
     font-size: 1.5rem;
   }
 
   &:hover {
-    border: 1px solid black;
+    color: $blue;
   }
 }
