--- a/css/style.css
+++ b/css/style.css
@@ -26,9 +26,9 @@ body {
   .title__secondary {
     font-size: 0.8rem; }
 
-.addition {
+.add {
   width: 100%; }
-  .addition__input {
+  .add__input {
     background-color: #f5f5f5; }
 
 .list {
@@ -39,10 +39,9 @@ body {
     flex-direction: row;
     display: flex;
     width: 100%;
-    height: 4rem;
+    min-height: 4rem;
     border: 2px solid black;
-    border-radius: 100px;
-    padding: 1rem;
+    padding: 0.5rem;
     margin: 2rem 0; }
 
 .template {
@@ -54,11 +53,16 @@ body {
   flex-direction: row;
   display: flex;
   width: 70%;
-  height: 3rem;
+  min-height: 3rem;
   border: 1px solid black;
-  border-radius: 100px;
-  padding: 0 0 0 2rem;
-  margin: 0 0 0 1rem; }
+  padding: 0 1rem 0 1rem;
+  margin: 0 0 0 1rem;
+  overflow: hidden;
+  transition: border 200ms ease; }
+  .item__content:focus {
+    outline: none; }
+  .item__content p {
+    padding: 1rem; }
 .item__buttons {
   justify-content: flex-end;
   align-items: center;
@@ -71,8 +75,6 @@ body {
   align-items: center;
   flex-direction: row;
   display: flex;
-  width: 3rem;
-  height: 3rem;
   border: none;
   border-radius: 50%;
   background-color: #f5f5f5;
@@ -84,6 +86,12 @@ body {
   .button i {
     font-size: 1.5rem; }
   .button:hover {
+    color: #9ffc9f; }
+  .button:focus {
+    outline: none; }
+  .button--remove:hover {
+    color: red; }
+  .button--edit:hover {
     color: #137a86; }
 
 /*# sourceMappingURL=style.css.map */
