--- a/css/style.scss
+++ b/css/style.scss
@@ -16,9 +16,6 @@ $dark-blue: #1b404f;
 $blackish: #031a23;
 $green: #9ffc9f;
 
-// Value variables
-$bo-ra: 100px;
-
 body {
   font-family: sans-serif;
   font-size: 16px;
@@ -45,7 +42,7 @@ body {
   }
 }
 
-.addition {
+.add {
   width: 100%;
 
   &__input {
@@ -59,10 +56,9 @@ body {
   &__item {
     @include flex-box(space-between, center, row, flex);
     width: 100%;
-    height: 4rem;
+    min-height: 4rem;
     border: 2px solid black;
-    border-radius: $bo-ra;
-    padding: 1rem;
+    padding: 0.5rem;
     margin: 2rem 0;
   }
 }
@@ -75,11 +71,20 @@ body {
   &__content {
     @include flex-box(flex-start, center, row, flex);
     width: 70%;
-    height: 3rem;
+    min-height: 3rem;
     border: 1px solid black;
-    border-radius: $bo-ra;
-    padding: 0 0 0 2rem;
+    padding: 0 1rem 0 1rem;
     margin: 0 0 0 1rem;
+    overflow: hidden;
+    transition: border 200ms ease;
+
+    &:focus {
+      outline: none;
+    }
+
+    p {
+      padding: 1rem;
+    }
   }
 
   &__buttons {
@@ -90,8 +95,7 @@ body {
 
 .button {
   @include flex-box(center, center, row, flex);
-  width: 3rem;
-  height: 3rem;
+
   border: none;
   border-radius: 50%;
   background-color: $white;
@@ -106,6 +110,22 @@ body {
   }
 
   &:hover {
-    color: $blue;
+    color: $green;
+  }
+
+  &:focus {
+    outline: none;
+  }
+
+  &--remove {
+    &:hover {
+      color: red;
+    }
+  }
+
+  &--edit {
+    &:hover {
+      color: $blue;
+    }
   }
 }
