--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,25 +1,6 @@
-// sass --watch resources/css/style.scss:resources/css/style.css
-
-
-// Mixins
-@mixin flex-box($justify-content: flex-start, $align-items: stretch, $flex-direction: row, $display: flex) {
-  justify-content: $justify-content;
-  align-items: $align-items;
-  flex-direction: $flex-direction;
-  display: $display;
-}
-
-// Color variables
-$white: #f5f5f5;
-$blue: #137a86;
-$dark-blue: #1b404f;
-$blackish: #031a23;
-$green: #9ffc9f;
-
 * {
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
-}
+  font-family: 'Roboto', sans-serif; }
 
 .header {
   width: 100%;
@@ -32,9 +13,8 @@ $green: #9ffc9f;
   background: #25b99a;
   box-shadow: 0px 2px 4px rgba(44, 62, 80, 0.15);
   border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-
-  &__input {
+  border-bottom-right-radius: 10px; }
+  .header__input {
     width: 100%;
     height: 50px;
     float: left;
@@ -51,31 +31,20 @@ $green: #9ffc9f;
     border: 0px;
     box-shadow: none;
     outline: none;
-
     -webkit-appearance: none;
     -moz-appearance: none;
     -ms-appearance: none;
     -o-appearance: none;
-    appearance: none;
-
-    &::-webkit-input-placeholder {
-      color: rgba(255, 255, 255, 0.75);
-    }
-
-    &::-moz-input-placeholder {
-      color: rgba(255, 255, 255, 0.75);
-    }
-
-    &::-ms-input-placeholder {
-      color: rgba(255, 255, 255, 0.75);
-    }
-
-    &::-o-input-placeholder {
-      color: rgba(255, 255, 255, 0.75);
-    }
-  }
-
-  &__button {
+    appearance: none; }
+    .header__input::-webkit-input-placeholder {
+      color: rgba(255, 255, 255, 0.75); }
+    .header__input::-moz-input-placeholder {
+      color: rgba(255, 255, 255, 0.75); }
+    .header__input::-ms-input-placeholder {
+      color: rgba(255, 255, 255, 0.75); }
+    .header__input::-o-input-placeholder {
+      color: rgba(255, 255, 255, 0.75); }
+  .header__button {
     width: 50px;
     height: 50px;
     position: absolute;
@@ -86,16 +55,10 @@ $green: #9ffc9f;
     background: #ffffff;
     border: 0;
     outline: none;
-
     -webkit-appearance: none;
     -moz-appearance: none;
     -ms-appearance: none;
     -o-appearance: none;
-    appearance: none;
-  }
-}
+    appearance: none; }
 
-.fa-plus {
-  font-size: 16px;
-  color: #25b99a;
-}
+/*# sourceMappingURL=style.css.map */
