--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,10 @@
 * {
-  box-sizing: border-box;
-  font-family: 'Roboto', sans-serif; }
+  box-sizing: border-box; }
+
+body {
+  font-family: 'Roboto', sans-serif;
+  background: #edf0f1;
+  padding: 80px 0 0 0; }
 
 .header {
   width: 100%;
@@ -55,10 +59,63 @@
     background: #ffffff;
     border: 0;
     outline: none;
+    cursor: pointer;
     -webkit-appearance: none;
     -moz-appearance: none;
     -ms-appearance: none;
     -o-appearance: none;
     appearance: none; }
+    .header__button i {
+      font-size: 20px;
+      color: #25b99a; }
+
+.container {
+  width: 100%;
+  float: left;
+  padding: 15px; }
+
+.todo {
+  width: 100%;
+  float: left; }
+  .todo li {
+    width: 100%;
+    height: 50px;
+    float: left;
+    background: #ffffff;
+    border-radius: 5px;
+    position: relative;
+    box-shadow: 0px 1px 2px rgba(44, 62, 80, 0.1);
+    margin: 0 0 10px 0;
+    padding: 0 100px 0 0; }
+    .todo li:last-of-type {
+      margin: 0; }
+  .todo__buttons {
+    width: 100px;
+    height: 50px;
+    position: absolute;
+    top: 0;
+    right: 0; }
+    .todo__buttons button {
+      width: 50px;
+      height: 50px;
+      float: left;
+      background: none;
+      position: relative;
+      border: 0px;
+      box-shadow: none;
+      outline: none;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      -ms-appearance: none;
+      -o-appearance: none;
+      appearance: none; }
+      .todo__buttons button:last-of-type:before {
+        content: '';
+        width: 1px;
+        height: 30px;
+        position: absolute;
+        top: 10px;
+        left: 0;
+        background: #edf0f1; }
 
 /*# sourceMappingURL=style.css.map */
