--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -18,7 +18,13 @@ $green: #9ffc9f;
 
 * {
   box-sizing: border-box;
+
+}
+
+body {
   font-family: 'Roboto', sans-serif;
+  background: #edf0f1;
+  padding: 80px 0 0 0;
 }
 
 .header {
@@ -86,11 +92,79 @@ $green: #9ffc9f;
     background: #ffffff;
     border: 0;
     outline: none;
+    cursor: pointer;
 
     -webkit-appearance: none;
     -moz-appearance: none;
     -ms-appearance: none;
     -o-appearance: none;
     appearance: none;
+
+    i {
+      font-size: 20px;
+      color: #25b99a;
+    }
+  }
+}
+
+.container {
+  width: 100%;
+  float: left;
+  padding: 15px;
+}
+
+.todo {
+  width: 100%;
+  float: left;
+
+  li {
+    width: 100%;
+    height: 50px;
+    float: left;
+    background: #ffffff;
+    border-radius: 5px;
+    position: relative;
+    box-shadow: 0px 1px 2px rgba(44, 62, 80, 0.10);
+    margin: 0 0 10px 0;
+    padding: 0 100px 0 0;
+
+    &:last-of-type {
+      margin: 0;
+    }
+  }
+
+  &__buttons {
+    width: 100px;
+    height: 50px;
+    position: absolute;
+    top: 0;
+    right: 0;
+
+    button {
+      width: 50px;
+      height: 50px;
+      float: left;
+      background: none;
+      position: relative;
+      border: 0px;
+      box-shadow: none;
+      outline: none;
+
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      -ms-appearance: none;
+      -o-appearance: none;
+      appearance: none;
+
+      &:last-of-type:before {
+        content: '';
+        width: 1px;
+        height: 30px;
+        position: absolute;
+        top: 10px;
+        left: 0;
+        background: #edf0f1;
+      }
+    }
   }
 }
