--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -79,14 +79,18 @@ body {
   float: left; }
   .todo li {
     width: 100%;
-    height: 50px;
+    min-height: 50px;
     float: left;
-    background: #ffffff;
+    font-size: 14px;
+    font-weight: 500;
+    color: #444;
+    background: #fff;
+    line-height: 22px;
     border-radius: 5px;
     position: relative;
     box-shadow: 0px 1px 2px rgba(44, 62, 80, 0.1);
     margin: 0 0 10px 0;
-    padding: 0 100px 0 0; }
+    padding: 14px 100px 14px 14px; }
     .todo li:last-of-type {
       margin: 0; }
   .todo__buttons {
@@ -117,5 +121,23 @@ body {
         top: 10px;
         left: 0;
         background: #edf0f1; }
+
+.buttons__remove, .buttons__complete {
+  cursor: pointer; }
+  .buttons__remove i, .buttons__complete i {
+    font-size: 22px;
+    -webkit-transition: color 200ms ease;
+    -moz-transition: color 200ms ease;
+    -ms-transition: color 200ms ease;
+    -o-transition: color 200ms ease;
+    transition: color 200ms ease; }
+.buttons__remove i {
+  color: #c0cecb; }
+.buttons__remove:hover i {
+  color: #e85656; }
+.buttons__complete i {
+  color: #c0c3cb; }
+.buttons__complete:hover i {
+  color: #25b99a; }
 
 /*# sourceMappingURL=style.css.map */
