--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -119,14 +119,18 @@ body {
 
   li {
     width: 100%;
-    height: 50px;
+    min-height: 50px;
     float: left;
-    background: #ffffff;
+    font-size: 14px;
+    font-weight: 500;
+    color: #444;
+    background: #fff;
+    line-height: 22px;
     border-radius: 5px;
     position: relative;
     box-shadow: 0px 1px 2px rgba(44, 62, 80, 0.10);
     margin: 0 0 10px 0;
-    padding: 0 100px 0 0;
+    padding: 14px 100px 14px 14px;
 
     &:last-of-type {
       margin: 0;
@@ -165,6 +169,50 @@ body {
         left: 0;
         background: #edf0f1;
       }
+    }
+  }
+}
+
+#completed {
+  .buttons__complete {
+    i {
+
+    }
+  }
+}
+
+.buttons {
+  &__remove,
+  &__complete {
+    cursor: pointer;
+
+    i {
+      font-size: 22px;
+      -webkit-transition: color 200ms ease;
+      -moz-transition: color 200ms ease;
+      -ms-transition: color 200ms ease;
+      -o-transition: color 200ms ease;
+      transition: color 200ms ease;
+    }
+  }
+
+  &__remove {
+    i {
+      color: #c0cecb;
+    }
+
+    &:hover i {
+      color: #e85656;
+    }
+  }
+
+  &__complete {
+    i {
+      color: #c0c3cb;
+    }
+
+    &:hover i {
+      color: #25b99a;
     }
   }
 }
