--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -174,9 +174,26 @@ body {
 }
 
 #completed {
+  position: relative;
+  
   .buttons__complete {
     i {
+      color: #25b99a;
+    }
+  }
 
+  &:not(:empty) {
+    padding: 60px 0 0 0;
+
+    &:before {
+      content: '';
+      width: 150px;
+      height: 1px;
+      background: #d8e5e0;
+      position: absolute;
+      top: 30px;
+      left: 50%;
+      margin: 0 0 0 -75px;
     }
   }
 }
