--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -22,6 +22,7 @@ $green: #9ffc9f;
 }
 
 body {
+  @include flex-box(center, stretch, row, flex);
   font-family: 'Roboto', sans-serif;
   background: #edf0f1;
   padding: 80px 0 0 0;
@@ -108,19 +109,29 @@ body {
 }
 
 .container {
+  @include flex-box(flex-start, center, column, flex);
   width: 100%;
-  float: left;
   padding: 15px;
+
+  @media only screen and (min-width: 650px) {
+    width: 80%;
+  }
 }
 
 .todo {
+  @include flex-box(flex-start, center, column, flex);
   width: 100%;
-  float: left;
+
+  @media only screen and (min-width: 1000px) {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: stretch;
+    flex-wrap: wrap;
+  }
 
   li {
     width: 100%;
     min-height: 50px;
-    float: left;
     font-size: 14px;
     font-weight: 500;
     color: #444;
@@ -132,8 +143,20 @@ body {
     margin: 0 0 10px 0;
     padding: 14px 100px 14px 14px;
 
+    @media only screen and (min-width: 1000px) {
+      margin: 10px;
+    }
+
     &:last-of-type {
       margin: 0;
+
+      @media only screen and (min-width: 1000px) {
+        margin: 10px;
+      }
+    }
+
+    @media only screen and (min-width: 1000px) {
+      width: 47%;
     }
   }
 
