Add responsive button states (active for mobile, hover for desktop)

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -189,11 +189,19 @@ body {
     transition: color 200ms ease; }
 .buttons__remove i {
   color: #c0cecb; }
-.buttons__remove:hover i {
-  color: #e85656; }
+@media only screen and (max-width: 1000px) {
+  .buttons__remove:active i {
+    color: #e85656; } }
+@media only screen and (min-width: 1000px) {
+  .buttons__remove:hover i {
+    color: #e85656; } }
 .buttons__complete i {
   color: #c0c3cb; }
-.buttons__complete:hover i {
-  color: #25b99a; }
+@media only screen and (max-width: 1000px) {
+  .buttons__complete:active i {
+    color: #25b99a; } }
+@media only screen and (min-width: 1000px) {
+  .buttons__complete:hover i {
+    color: #25b99a; } }
 
 /*# sourceMappingURL=style.css.map */
