--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -264,13 +264,7 @@ body {
       color: #c0cecb;
     }
 
-    @media only screen and (max-width: 1000px) {
-      &:active i {
-        color: #e85656;
-      }
-    }
-
-    @media only screen and (min-width: 1000px) {
+    @media (hover:hover) {
       &:hover i {
         color: #e85656;
       }
@@ -282,13 +276,7 @@ body {
       color: #c0c3cb;
     }
 
-    @media only screen and (max-width: 1000px) {
-      &:active i {
-        color: #25b99a;
-      }
-    }
-
-    @media only screen and (min-width: 1000px) {
+    @media (hover:hover) {
       &:hover i {
         color: #25b99a;
       }
