--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -220,6 +220,10 @@ body {
   position: relative;
   padding: 60px 0 0 0;
 
+  li {
+    color: #8a8a8a;
+  }
+
   .buttons__complete {
     i {
       color: #25b99a;
