--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -30,7 +30,7 @@ body {
     font-size: 15px;
     font-weight: 400;
     text-indent: 18px;
-    padding: 0 60px 0 0;
+    margin: 0 83px 0 0;
     background: rgba(255, 255, 255, 0.2);
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
@@ -52,14 +52,17 @@ body {
       color: rgba(255, 255, 255, 0.75); }
     .header__input::-o-input-placeholder {
       color: rgba(255, 255, 255, 0.75); }
+  .header__menu {
+    right: 12px; }
   .header__button {
-    width: 50px;
-    height: 50px;
+    right: 83px; }
+  .header__menu, .header__button {
+    width: 56px;
+    height: 56px;
     position: absolute;
-    top: 15px;
-    right: 15px;
+    top: 12px;
+    border-radius: 28px;
     z-index: 2;
-    border-radius: 25px;
     background: #ffffff;
     border: 0;
     outline: none;
@@ -69,7 +72,7 @@ body {
     -ms-appearance: none;
     -o-appearance: none;
     appearance: none; }
-    .header__button i {
+    .header__menu i, .header__button i {
       font-size: 20px;
       color: #25b99a; }
 
