--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -49,7 +49,8 @@ body {
     font-size: 15px;
     font-weight: 400;
     text-indent: 18px;
-    padding: 0 60px 0 0;
+    //padding: 0 60px 0 0;
+    margin: 0 83px 0 0;
     background: rgba(255, 255, 255, 0.2);
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
@@ -82,14 +83,22 @@ body {
     }
   }
 
+  &__menu {
+    right: 12px;
+  }
+
   &__button {
-    width: 50px;
-    height: 50px;
+    right: 83px;
+  }
+
+  &__menu,
+  &__button {
+    width: 56px;
+    height: 56px;
     position: absolute;
-    top: 15px;
-    right: 15px;
+    top: 12px;
+    border-radius: 28px;
     z-index: 2;
-    border-radius: 25px;
     background: #ffffff;
     border: 0;
     outline: none;
