--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,7 +8,15 @@ body {
   display: flex;
   font-family: 'Roboto', sans-serif;
   background: #edf0f1;
-  padding: 80px 0 0 0; }
+  padding: 80px 0 0 0;
+  width: 100%; }
+
+.list-panel {
+  justify-content: center;
+  align-items: stretch;
+  flex-direction: row;
+  display: flex;
+  width: 100%; }
 
 .header {
   width: 100%;
