--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -16,7 +16,12 @@ body {
   align-items: stretch;
   flex-direction: row;
   display: flex;
-  width: 100%; }
+  width: 100%;
+  opacity: 1;
+  transition: opacity 200ms ease; }
+
+.opacity {
+  opacity: 0.5; }
 
 .header {
   width: 100%;
@@ -34,11 +39,11 @@ body {
     width: 100%;
     height: 50px;
     float: left;
-    color: #ffffff;
+    color: #fff;
     font-size: 15px;
     font-weight: 400;
     text-indent: 18px;
-    margin: 0 83px 0 0;
+    padding: 0 143px 0 0;
     background: rgba(255, 255, 255, 0.2);
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
@@ -60,29 +65,33 @@ body {
       color: rgba(255, 255, 255, 0.75); }
     .header__input::-o-input-placeholder {
       color: rgba(255, 255, 255, 0.75); }
-  .header__menu {
-    right: 12px; }
-  .header__button {
+
+.button {
+  width: 56px;
+  height: 56px;
+  position: absolute;
+  top: 12px;
+  border-radius: 28px;
+  z-index: 2;
+  background: #fff;
+  border: 0;
+  outline: none;
+  cursor: pointer;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  -o-appearance: none;
+  appearance: none; }
+  .button i {
+    font-size: 20px; }
+  .button--itemAdd, .button--listAdd {
     right: 83px; }
-  .header__menu, .header__button {
-    width: 56px;
-    height: 56px;
-    position: absolute;
-    top: 12px;
-    border-radius: 28px;
-    z-index: 2;
-    background: #ffffff;
-    border: 0;
-    outline: none;
-    cursor: pointer;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    -ms-appearance: none;
-    -o-appearance: none;
-    appearance: none; }
-    .header__menu i, .header__button i {
-      font-size: 20px;
-      color: #25b99a; }
+  .button--itemMenu, .button--listMenu {
+    right: 12px; }
+  .button--itemAdd i, .button--itemMenu i {
+    color: #25b99a; }
+  .button--listAdd i, .button--listMenu i {
+    color: #ff6833; }
 
 .container {
   justify-content: flex-start;
@@ -204,11 +213,67 @@ body {
   color: #c0cecb; }
 @media (hover: hover) {
   .buttons__remove:hover i {
-    color: #e85656; } }
+    color: #ff6833; } }
 .buttons__complete i {
-  color: #c0c3cb; }
+  color: #c0cecb; }
 @media (hover: hover) {
   .buttons__complete:hover i {
     color: #25b99a; } }
+
+.menu-panel {
+  position: fixed;
+  top: 0;
+  right: -80%;
+  width: 80%;
+  height: 100%;
+  z-index: 10;
+  background: #edf0f1;
+  box-shadow: 0px 2px 4px rgba(44, 62, 80, 0.15);
+  transition: right 200ms ease; }
+
+.positionOut {
+  right: 0; }
+
+.menu {
+  width: 100%;
+  height: 80px;
+  padding: 15px;
+  top: 0;
+  left: 0;
+  z-index: 5;
+  background: #ff6833;
+  box-shadow: 0px 2px 4px rgba(44, 62, 80, 0.15);
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px; }
+  .menu__input {
+    width: 100%;
+    height: 50px;
+    float: left;
+    color: #fff;
+    font-size: 15px;
+    font-weight: 400;
+    text-indent: 18px;
+    padding: 0 143px 0 0;
+    background: rgba(255, 255, 255, 0.2);
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
+    border: 0px;
+    box-shadow: none;
+    outline: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -ms-appearance: none;
+    -o-appearance: none;
+    appearance: none; }
+    .menu__input::-webkit-input-placeholder {
+      color: rgba(255, 255, 255, 0.75); }
+    .menu__input::-moz-input-placeholder {
+      color: rgba(255, 255, 255, 0.75); }
+    .menu__input::-ms-input-placeholder {
+      color: rgba(255, 255, 255, 0.75); }
+    .menu__input::-o-input-placeholder {
+      color: rgba(255, 255, 255, 0.75); }
 
 /*# sourceMappingURL=style.css.map */
