--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -20,9 +20,6 @@ body {
   opacity: 1;
   transition: opacity 200ms ease; }
 
-.opacity {
-  opacity: 0.5; }
-
 .header {
   width: 100%;
   height: 80px;
@@ -221,18 +218,24 @@ body {
     color: #25b99a; } }
 
 .menu-panel {
+  justify-content: flex-start;
+  align-items: stretch;
+  flex-direction: row;
+  display: flex;
   position: fixed;
   top: 0;
-  right: -80%;
-  width: 80%;
+  right: -100%;
+  width: 100%;
   height: 100%;
   z-index: 10;
-  background: #edf0f1;
-  box-shadow: 0px 2px 4px rgba(44, 62, 80, 0.15);
   transition: right 200ms ease; }
 
-.positionOut {
-  right: 0; }
+.panel__cover {
+  width: 20%; }
+.panel__content {
+  width: 80%;
+  background: #edf0f1;
+  box-shadow: 0px 2px 4px rgba(44, 62, 80, 0.15); }
 
 .menu {
   width: 100%;
