--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -39,10 +39,6 @@ body {
   transition: opacity 200ms ease;
 }
 
-.opacity {
-  opacity: 0.5;
-}
-
 .header {
   width: 100%;
   height: 80px;
@@ -326,19 +322,26 @@ body {
 }
 
 .menu-panel {
+  @include flex-box(flex-start, stretch, row, flex);
   position: fixed;
   top: 0;
-  right: -80%;
-  width: 80%;
+  right: -100%;
+  width: 100%;
   height: 100%;
   z-index: 10;
-  background: $background;
-  box-shadow: 0px 2px 4px rgba(44, 62, 80, 0.15);
   transition: right 200ms ease;
 }
 
-.positionOut {
-  right: 0;
+.panel {
+  &__cover {
+    width: 20%;
+  }
+
+  &__content {
+    width: 80%;
+    background: $background;
+    box-shadow: 0px 2px 4px rgba(44, 62, 80, 0.15);
+  }
 }
 
 .menu {
