--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -101,19 +101,22 @@ body {
     .container {
       width: 80%; } }
 
-.todo {
+.todo,
+.list {
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
   display: flex;
   width: 100%; }
   @media only screen and (min-width: 1000px) {
-    .todo {
+    .todo,
+    .list {
       flex-direction: row;
       justify-content: space-between;
       align-items: stretch;
       flex-wrap: wrap; } }
-  .todo li {
+  .todo li,
+  .list li {
     width: 100%;
     min-height: 50px;
     font-size: 14px;
@@ -124,26 +127,30 @@ body {
     border-radius: 5px;
     position: relative;
     box-shadow: 0px 1px 2px rgba(44, 62, 80, 0.1);
-    margin: 0 0 10px 0;
-    padding: 14px 100px 14px 14px; }
+    margin: 0 0 10px 0; }
     @media only screen and (min-width: 1000px) {
-      .todo li {
+      .todo li,
+      .list li {
         margin: 10px; } }
-    .todo li:last-of-type {
+    .todo li:last-of-type,
+    .list li:last-of-type {
       margin: 0; }
       @media only screen and (min-width: 1000px) {
-        .todo li:last-of-type {
+        .todo li:last-of-type,
+        .list li:last-of-type {
           margin: 10px; } }
     @media only screen and (min-width: 1000px) {
-      .todo li {
+      .todo li,
+      .list li {
         width: 47%; } }
-  .todo__buttons {
-    width: 100px;
+  .todo__buttons,
+  .list__buttons {
     height: 50px;
     position: absolute;
     top: 0;
     right: 0; }
-    .todo__buttons button {
+    .todo__buttons button,
+    .list__buttons button {
       width: 50px;
       height: 50px;
       float: left;
@@ -157,17 +164,36 @@ body {
       -ms-appearance: none;
       -o-appearance: none;
       appearance: none; }
-      .todo__buttons button:last-of-type:before {
-        content: '';
-        width: 1px;
-        height: 30px;
-        position: absolute;
-        top: 10px;
-        left: 0;
-        background: #edf0f1; }
+
+.todo li {
+  padding: 14px 100px 14px 14px; }
+.todo__buttons {
+  width: 100px; }
+  .todo__buttons button:last-of-type:before {
+    content: '';
+    width: 1px;
+    height: 30px;
+    position: absolute;
+    top: 10px;
+    left: 0;
+    background: #edf0f1; }
+
+.list li {
+  padding: 14px 50px 14px 14px; }
+.list__buttons {
+  width: 50px; }
+  .list__buttons button:before {
+    content: '';
+    width: 1px;
+    height: 30px;
+    position: absolute;
+    top: 10px;
+    left: 0;
+    background: #edf0f1; }
 
 #todo:after,
-#completed:after {
+#completed:after,
+#list:after {
   width: 100%;
   display: block;
   text-align: center;
@@ -176,6 +202,10 @@ body {
 
 #todo:empty:after {
   content: 'You have nothing to do.';
+  margin: 15px 0 0 0; }
+
+#list:empty:after {
+  content: 'You don\'t have any lists yet.';
   margin: 15px 0 0 0; }
 
 #completed {
@@ -233,6 +263,10 @@ body {
 .panel__cover {
   width: 20%; }
 .panel__content {
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+  display: flex;
   width: 80%;
   background: #edf0f1;
   box-shadow: 0px 2px 4px rgba(44, 62, 80, 0.15); }
