--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -151,7 +151,9 @@ body {
   }
 }
 
-.todo {
+
+.todo,
+.list {
   @include flex-box(flex-start, center, column, flex);
   width: 100%;
 
@@ -174,7 +176,7 @@ body {
     position: relative;
     box-shadow: 0px 1px 2px rgba(44, 62, 80, 0.10);
     margin: 0 0 10px 0;
-    padding: 14px 100px 14px 14px;
+
 
     @media only screen and (min-width: 1000px) {
       margin: 10px;
@@ -194,7 +196,6 @@ body {
   }
 
   &__buttons {
-    width: 100px;
     height: 50px;
     position: absolute;
     top: 0;
@@ -215,7 +216,17 @@ body {
       -ms-appearance: none;
       -o-appearance: none;
       appearance: none;
+    }
+  }
+}
 
+.todo {
+  li {
+    padding: 14px 100px 14px 14px;
+  }
+  &__buttons {
+    width: 100px;
+    button {
       &:last-of-type:before {
         content: '';
         width: 1px;
@@ -229,8 +240,29 @@ body {
   }
 }
 
+.list {
+  li {
+    padding: 14px 50px 14px 14px;
+  }
+  &__buttons {
+    width: 50px;
+    button {
+      &:before {
+        content: '';
+        width: 1px;
+        height: 30px;
+        position: absolute;
+        top: 10px;
+        left: 0;
+        background: $background;
+      }
+    }
+  }
+}
+
 #todo,
-#completed {
+#completed,
+#list {
   &:after {
     width: 100%;
     display: block;
@@ -244,6 +276,15 @@ body {
   &:empty {
     &:after {
       content: 'You have nothing to do.';
+      margin: 15px 0 0 0;
+    }
+  }
+}
+
+#list {
+  &:empty {
+    &:after {
+      content: 'You don\'t have any lists yet.';
       margin: 15px 0 0 0;
     }
   }
@@ -338,6 +379,7 @@ body {
   }
 
   &__content {
+    @include flex-box(flex-start, center, column, flex);
     width: 80%;
     background: $background;
     box-shadow: 0px 2px 4px rgba(44, 62, 80, 0.15);
