--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -21,7 +21,11 @@ $unhover: #c0cecb;
 
 * {
   box-sizing: border-box;
+}
 
+::-webkit-scrollbar {
+  width: 0;
+  background: transparent;
 }
 
 body {
@@ -144,7 +148,7 @@ body {
 .container {
   @include flex-box(flex-start, center, column, flex);
   width: 100%;
-  padding: 15px;
+  padding: 0 15px;
 
   @media only screen and (min-width: 650px) {
     width: 80%;
@@ -175,23 +179,10 @@ body {
     border-radius: 5px;
     position: relative;
     box-shadow: 0px 1px 2px rgba(44, 62, 80, 0.10);
-    margin: 0 0 10px 0;
-
-
-    @media only screen and (min-width: 1000px) {
-      margin: 10px;
-    }
-
-    &:last-of-type {
-      margin: 0;
-
-      @media only screen and (min-width: 1000px) {
-        margin: 10px;
-      }
-    }
+    margin: 10px 0 0 0;
 
     @media only screen and (min-width: 1000px) {
-      width: 47%;
+      width: 46%;
     }
   }
 
@@ -224,9 +215,12 @@ body {
   li {
     padding: 14px 100px 14px 14px;
   }
+
   &__buttons {
     width: 100px;
+
     button {
+
       &:last-of-type:before {
         content: '';
         width: 1px;
@@ -241,12 +235,18 @@ body {
 }
 
 .list {
+  overflow-y: scroll;
+
   li {
     padding: 14px 50px 14px 14px;
+    cursor: pointer;
   }
+
   &__buttons {
     width: 50px;
+
     button {
+
       &:before {
         content: '';
         width: 1px;
@@ -318,6 +318,7 @@ body {
   &:empty {
     &:after {
       content: 'You have yet to complete any tasks.';
+      margin: 0 0 15px 0;
     }
   }
 }
@@ -381,12 +382,14 @@ body {
   &__content {
     @include flex-box(flex-start, center, column, flex);
     width: 80%;
+    height: 100%;
     background: $background;
     box-shadow: 0px 2px 4px rgba(44, 62, 80, 0.15);
   }
 }
 
 .menu {
+  //position: fixed;
   width: 100%;
   height: 80px;
   padding: 15px;
