--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -39,7 +39,7 @@ body {
 .list-panel {
   @include flex-box(center, stretch, row, flex);
   width: 100%;
-  opacity: 1;
+  opacity: 0.5;
   transition: opacity 200ms ease;
 }
 
@@ -142,6 +142,35 @@ body {
     i {
       color: $list;
     }
+  }
+}
+
+.alert {
+  opacity: 0;
+  position: absolute;
+  right: 83px;
+  top: 78px;
+  padding: 15px;
+  background: #fff;
+  border-radius: 5px;
+  transition: opacity 200ms ease;
+
+  &__text {
+    color: $list;
+    font-size: 12px;
+    font-weight: 600;
+  }
+
+  &::after {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 0;
+    top: -5px;
+    right: 22px;
+    border-left: 5px solid rgba(255, 255, 255, 0);
+    border-right: 5px solid rgba(255, 255, 255, 0);
+    border-bottom: 5px solid #fff;
   }
 }
 
@@ -367,11 +396,11 @@ body {
   @include flex-box(flex-start, stretch, row, flex);
   position: fixed;
   top: 0;
-  right: -100%;
+  right: 0;
   width: 100%;
   height: 100%;
   z-index: 10;
-  transition: right 200ms ease;
+  transition: right 300ms ease;
 }
 
 .panel {
