--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -335,4 +335,7 @@ body {
     .menu__input::-o-input-placeholder {
       color: rgba(255, 255, 255, 0.75); }
 
+#activeList {
+  border-left: 5px solid #ff6833; }
+
 /*# sourceMappingURL=style.css.map */
