--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -95,10 +95,7 @@ body {
     color: #ff6833; }
 
 .alert {
-  display: none;
   position: absolute;
-  right: 83px;
-  top: 78px;
   padding: 15px;
   background: #fff;
   border-radius: 5px;
@@ -107,16 +104,37 @@ body {
     color: #ff6833;
     font-size: 12px;
     font-weight: 600; }
-  .alert::after {
-    content: '';
-    position: absolute;
-    width: 0;
-    height: 0;
-    top: -5px;
-    right: 22px;
-    border-left: 5px solid rgba(255, 255, 255, 0);
-    border-right: 5px solid rgba(255, 255, 255, 0);
-    border-bottom: 5px solid #fff; }
+  .alert--list {
+    display: none;
+    right: 83px;
+    top: 78px;
+    transition: opacity 200ms ease; }
+    .alert--list::after {
+      content: '';
+      position: absolute;
+      width: 0;
+      height: 0;
+      top: -5px;
+      right: 22px;
+      border-left: 5px solid rgba(255, 255, 255, 0);
+      border-right: 5px solid rgba(255, 255, 255, 0);
+      border-bottom: 5px solid #fff; }
+  .alert--active {
+    display: none;
+    left: 15px;
+    top: 91.5px;
+    z-index: 10;
+    transition: opacity 200ms ease; }
+    .alert--active::after {
+      content: '';
+      position: absolute;
+      width: 0;
+      height: 0;
+      top: 18px;
+      right: -5px;
+      border-top: 5px solid rgba(255, 255, 255, 0);
+      border-left: 5px solid #ff6833;
+      border-bottom: 5px solid rgba(255, 255, 255, 0); }
 
 .container {
   justify-content: flex-start;
@@ -282,7 +300,8 @@ body {
   transition: right 300ms ease; }
 
 .panel__cover {
-  width: 20%; }
+  width: 20%;
+  position: relative; }
 .panel__content {
   justify-content: flex-start;
   align-items: center;
