--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -12,7 +12,7 @@ body {
   display: flex;
   font-family: 'Roboto', sans-serif;
   background: #edf0f1;
-  padding: 80px 0 0 0;
+  padding: 145px 0 0 0;
   width: 100%; }
 
 .list-panel {
@@ -26,7 +26,7 @@ body {
 
 .header {
   width: 100%;
-  height: 80px;
+  height: 125px;
   position: fixed;
   padding: 15px;
   top: 0;
@@ -36,7 +36,20 @@ body {
   box-shadow: 0px 2px 4px rgba(44, 62, 80, 0.15);
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px; }
+  .header__title {
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    display: flex;
+    width: 100%;
+    height: 30px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px; }
   .header__input {
+    position: relative;
+    top: 15px;
     width: 100%;
     height: 50px;
     float: left;
@@ -44,7 +57,7 @@ body {
     font-size: 15px;
     font-weight: 400;
     text-indent: 18px;
-    padding: 0 143px 0 0;
+    padding: 0 123px 0 0;
     background: rgba(255, 255, 255, 0.2);
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
@@ -66,6 +79,11 @@ body {
       color: rgba(255, 255, 255, 0.75); }
     .header__input::-o-input-placeholder {
       color: rgba(255, 255, 255, 0.75); }
+
+.title__text {
+  color: rgba(255, 255, 255, 0.85);
+  font-size: 20px;
+  font-weight: 600; }
 
 .button {
   width: 56px;
@@ -89,8 +107,10 @@ body {
     right: 83px; }
   .button--itemMenu, .button--listMenu {
     right: 12px; }
-  .button--itemAdd i, .button--itemMenu i {
-    color: #25b99a; }
+  .button--itemAdd, .button--itemMenu {
+    top: 57px; }
+    .button--itemAdd i, .button--itemMenu i {
+      color: #25b99a; }
   .button--listAdd i, .button--listMenu i {
     color: #ff6833; }
 
