--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -32,7 +32,7 @@ body {
   @include flex-box(center, stretch, row, flex);
   font-family: 'Roboto', sans-serif;
   background: $background;
-  padding: 80px 0 0 0;
+  padding: 145px 0 0 0;
   width: 100%;
 }
 
@@ -45,7 +45,7 @@ body {
 
 .header {
   width: 100%;
-  height: 80px;
+  height: 125px;
   position: fixed;
   padding: 15px;
   top: 0;
@@ -56,7 +56,19 @@ body {
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
 
+  &__title {
+    @include flex-box(center, center, row, flex);
+    width: 100%;
+    height: 30px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+  }
+
   &__input {
+    position: relative;
+    top: 15px;
     width: 100%;
     height: 50px;
     float: left;
@@ -64,7 +76,7 @@ body {
     font-size: 15px;
     font-weight: 400;
     text-indent: 18px;
-    padding: 0 143px 0 0;
+    padding: 0 123px 0 0;
     background: rgba(255, 255, 255, 0.2);
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
@@ -96,6 +108,12 @@ body {
       color: rgba(255, 255, 255, 0.75);
     }
   }
+}
+
+.title__text {
+  color: rgba(255, 255, 255, 0.85);
+  font-size: 20px;
+  font-weight: 600;
 }
 
 .button {
@@ -132,6 +150,7 @@ body {
 
   &--itemAdd,
   &--itemMenu {
+    top: 57px;
     i {
       color: $item;
     }
