--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -42,11 +42,7 @@ body {
     flex-direction: row;
     display: flex;
     width: 100%;
-    height: 30px;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px; }
+    height: 30px; }
   .header__input {
     position: relative;
     top: 15px;
@@ -85,6 +81,10 @@ body {
   font-size: 20px;
   font-weight: 600; }
 
+.text--menu {
+  font-size: 30px;
+  font-weight: 600; }
+
 .button {
   width: 56px;
   height: 56px;
@@ -111,8 +111,10 @@ body {
     top: 57px; }
     .button--itemAdd i, .button--itemMenu i {
       color: #25b99a; }
-  .button--listAdd i, .button--listMenu i {
-    color: #ff6833; }
+  .button--listAdd, .button--listMenu {
+    top: 57px; }
+    .button--listAdd i, .button--listMenu i {
+      color: #ff6833; }
 
 .alert {
   position: absolute;
@@ -334,7 +336,7 @@ body {
 
 .menu {
   width: 100%;
-  height: 80px;
+  height: 125px;
   padding: 15px;
   top: 0;
   left: 0;
@@ -343,6 +345,14 @@ body {
   box-shadow: 0px 2px 4px rgba(44, 62, 80, 0.15);
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px; }
+  .menu__title {
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    display: flex;
+    width: 100%;
+    height: 30px;
+    margin: 0 0 15px 0; }
   .menu__input {
     width: 100%;
     height: 50px;
@@ -351,7 +361,7 @@ body {
     font-size: 15px;
     font-weight: 400;
     text-indent: 18px;
-    padding: 0 143px 0 0;
+    padding: 0 123px 0 0;
     background: rgba(255, 255, 255, 0.2);
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
