--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -60,10 +60,6 @@ body {
     @include flex-box(center, center, row, flex);
     width: 100%;
     height: 30px;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
   }
 
   &__input {
@@ -116,6 +112,11 @@ body {
   font-weight: 600;
 }
 
+.text--menu {
+  font-size: 30px;
+  font-weight: 600;
+}
+
 .button {
   width: 56px;
   height: 56px;
@@ -158,6 +159,7 @@ body {
 
   &--listAdd,
   &--listMenu {
+    top: 57px;
     i {
       color: $list;
     }
@@ -461,9 +463,8 @@ body {
 }
 
 .menu {
-  //position: fixed;
   width: 100%;
-  height: 80px;
+  height: 125px;
   padding: 15px;
   top: 0;
   left: 0;
@@ -473,6 +474,13 @@ body {
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
 
+  &__title {
+    @include flex-box(center, center, row, flex);
+    width: 100%;
+    height: 30px;
+    margin: 0 0 15px 0;
+  }
+
   &__input {
     width: 100%;
     height: 50px;
@@ -481,7 +489,7 @@ body {
     font-size: 15px;
     font-weight: 400;
     text-indent: 18px;
-    padding: 0 143px 0 0;
+    padding: 0 123px 0 0;
     background: rgba(255, 255, 255, 0.2);
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
